[project]
name = "transformer-flax"
version = "0.1.0"
description = "implementation of transformer architecture using flax and jax"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "autopep8>=2.3.2",
    "flax>=0.10.4",
    "jax[cuda12]>=0.5.1",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "pandas>=2.2.3",
]
